tests/ui/method_not_found.stderr
[tests/ui/method_not_found.pea:3:7-3:9] error: no method named `foo` found for type `[u8]` in the current scope

error: aborting due to 1 previous error

