tests/ui/method_not_found.pea
fn main() {
    let x = b"abc";
    x.foo();
}
